# tools-api

./: Cargo.toml  LICENSE  PR_DESCRIPTION.md  README.md  Rocket.toml  patch
src/: constants.rs  extractors.rs  lib.rs  main.rs  types.rs
src/endpoints/: basic.rs  convert.rs  crypto.rs  encoding.rs  fun.rs  generators.rs  mod.rs  qr.rs  text.rs  time.rs  utils.rs
templates/: index.html.hbs
