[package]
name = "tools-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["process", "time"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
base64 = "0.13"
sha1 = "0.10"
sha2 = "0.10"
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["handlebars", "tera"]


